<resources>
    <string name="app_name">Udemy Bitirme</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="campaign">Campaign</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="restaurant">Restaurant</string>
    <string name="extended_fab_label">AD TO CART</string>
    <string name="extended_fab_content_desc">AD TO CART</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>
    <string name="total">Total:</string>
    <string name="confirm_basket">CONFIRM BASKET</string>
    <string name="create">Create</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="email">contact@uygulamaAdi.com</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="regional">Regional</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="edit_personal_details">Edit Personal details</string>
    <string name="userName">Dante</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="ingredients">Ingredients</string>
    <string name="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s</string>
    <string name="instructions">Instructions</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="price">Price:</string>
    <string name="quantity">Quantity:</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="_247_cals">247 cals</string>
    <string name="_30_min">30 min</string>
    <string name="_3_persons">3 persons</string>
    <string name="search">Search</string>
    <string name="your_basket_is_empty">Your Basket is Empty</string>
</resources>