<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/custom_color_primary"
        tools:context=".MainActivity">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/onboardingViewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/view_pager_background"
            app:layout_constraintBottom_toTopOf="@id/viewCenterOfNext"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/indicatorsContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:text="@string/skip"
            android:textColor="@color/custom_color_primary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@drawable/icon_outer_background"
            app:layout_constraintBottom_toBottomOf="@+id/imageNext"
            app:layout_constraintEnd_toEndOf="@id/imageNext"
            app:layout_constraintStart_toStartOf="@id/imageNext"
            app:layout_constraintTop_toTopOf="@id/imageNext" />

        <View
            android:id="@+id/viewCenterOfNext"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="@id/imageNext"
            app:layout_constraintEnd_toEndOf="@id/imageNext"
            app:layout_constraintStart_toStartOf="@+id/imageNext"
            app:layout_constraintTop_toTopOf="@id/imageNext" />

        <ImageView
            android:id="@+id/imageNext"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/icon_background"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_right"
            app:layout_constraintBottom_toTopOf="@+id/buttonGetStarted"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/custom_color_background" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonGetStarted"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="50dp"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold"
            android:backgroundTint="@color/custom_color_secondary"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>