<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.SettingsFragment">


        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/notifications"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewProfile" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewRegional"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/imgToolbarBtnBackLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginEnd="16dp"
                    android:background="@color/white"
                    android:src="@drawable/ic_right"
                    app:layout_constraintBottom_toBottomOf="@+id/circleImageViewLogout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/circleImageViewLogout" />


                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/circleImageViewLanguage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/circleImageViewLanguage" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleImageViewLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/blue"
                    android:src="@drawable/ic_settings_language"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleImageViewLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/lavender"
                    android:src="@drawable/ic_settings_logout"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/circleImageViewLanguage" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:fontFamily="@font/ibm_plex_mono"
                    android:text="@string/language"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/circleImageViewLanguage"
                    app:layout_constraintStart_toEndOf="@+id/circleImageViewLanguage"
                    app:layout_constraintTop_toTopOf="@+id/circleImageViewLanguage" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:fontFamily="@font/ibm_plex_mono"
                    android:text="@string/logout"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/circleImageViewLogout"
                    app:layout_constraintStart_toEndOf="@+id/circleImageViewLogout"
                    app:layout_constraintTop_toTopOf="@+id/circleImageViewLogout" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/regional"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notificationsCardView" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/ibm_plex_mono"
            android:text="@string/dark_mode"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/circleImageViewDarkMode"
            app:layout_constraintStart_toEndOf="@+id/circleImageViewDarkMode"
            app:layout_constraintTop_toTopOf="@+id/circleImageViewDarkMode" />

        <Switch
            android:id="@+id/switchDarkMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView11" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/imgToolbarBtnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginEnd="16dp"
                    android:background="@color/white"
                    android:src="@drawable/ic_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleImageView"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/foto"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/edit_personal_details"
                    android:textColor="@color/gray"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/circleImageView"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/gilroy_bold"
                    android:text="@string/userName"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/circleImageView"
                    app:layout_constraintTop_toTopOf="@+id/circleImageView" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/imgToolbarBtnBack3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginEnd="16dp"
                    android:background="@color/white"
                    android:src="@drawable/ic_right"
                    app:layout_constraintBottom_toBottomOf="@+id/circleImageView3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/circleImageView3" />

                <ImageButton
                    android:id="@+id/imgToolbarBtnBack2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginEnd="16dp"
                    android:background="@color/white"
                    android:src="@drawable/ic_right"
                    app:layout_constraintBottom_toBottomOf="@+id/circleImageView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/circleImageView2" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleImageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/orangered"
                    android:src="@drawable/ic_settings_profile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleImageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/yellow"
                    android:src="@drawable/ic_settings_password"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/circleImageView2" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:fontFamily="@font/ibm_plex_mono"
                    android:text="@string/edit_profile"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/circleImageView2"
                    app:layout_constraintStart_toEndOf="@+id/circleImageView2"
                    app:layout_constraintTop_toTopOf="@+id/circleImageView2" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:fontFamily="@font/ibm_plex_mono"
                    android:text="@string/change_password"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/circleImageView3"
                    app:layout_constraintStart_toEndOf="@+id/circleImageView3"
                    app:layout_constraintTop_toTopOf="@+id/circleImageView3" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/profile"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageViewDarkMode" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageViewDarkMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:background="@color/gray"
            android:src="@drawable/ic_dark_mode_round"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/notificationsCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/imgToolbarBtnBack4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginEnd="16dp"
                    android:background="@color/white"
                    android:src="@drawable/ic_right"
                    app:layout_constraintBottom_toBottomOf="@+id/circleImageView4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/circleImageView4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:fontFamily="@font/ibm_plex_mono"
                    android:text="@string/notifications"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/circleImageView4"
                    app:layout_constraintStart_toEndOf="@+id/circleImageView4"
                    app:layout_constraintTop_toTopOf="@+id/circleImageView4" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleImageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/green"
                    android:src="@drawable/ic_notification"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>